# td3_bc

./: .gitignore  README.md  evaluate.py  main.py  pyproject.toml  train.py
.devcontainer/: Dockerfile  build_apptainer_from_docker.sh  devcontainer.json  docker-compose.yml
config/: config_online.yaml  config_pretrain.yaml  config_refine.yaml  train_config.py
src/dmc_envs/: __init__.py  dmc2gym.py  utils.py
src/td3_bc/: __init__.py  buffer.py  evaluator.py  policies.py  segmentation.py  td3_bc.py  td3_bc_ftd.py  trainer.py  utils.py  wrappers.py
src/td3_bc/ftd/: README.md  auxiliary_pred.py  image_attention.py  modules.py
