[project]
name = "td3-bc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "draccus>=0.11.5",
    "gymnasium[classic-control,mujoco]>=1.1.1",
    "minari[all]>=0.5.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 120
