[project]
name = "td3-bc"
version = "0.1.0"
description = "A repository for offline to online RL using the TD3-BC algorithm."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "draccus>=0.11.5",
    "gymnasium[classic-control,mujoco]>=1.1.1",
    "minari[all]>=0.5.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]

[project.optional-dependencies]
dm-control = [
    "dm-control>=1.0.31",
    "imageio[pyav]>=2.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/td3_bc"]

[dependency-groups]
dev = [
    "pandas>=2.3.0",
    "ruff>=0.11.10",
    "tabulate>=0.9.0",
]

[tool.ruff]
line-length = 120
